new changes to be sent

--- a/imageRotater.html
+++ b/imageRotater.html
@@ -5,7 +5,7 @@
 <title>Image rotator javascript demo</title>
 <script src="jquery.js" type="text/javascript"></script>
 <!--script src="imageRotater.js" type="text/javascript"></script-->
-<script src="imageRotater.js" type="text/javascript"></script>
+<script src="imageRotaterPrototype.js" type="text/javascript"></script>
 
 
 
